SET(LIB_NAME StandardLib)

OPTION(${PROJECT_NAME}_BUILD_${LIB_NAME} "Set this to ON to build ${LIB_NAME}." ON)

IF(${${PROJECT_NAME}_BUILD_${LIB_NAME}})
    SET(HEADER_FILES
						AbstractClass.h
						Action.h
						Actions.h
						Array.h
						ArrayCommonObject.h
						ArrayCommonUnknown.h
						ArrayType.h
						ArrayUnknown.h
						Base.h
						BaseObject.h
						Channel.h
						ChannelAccessor.h
						ChannelPadder.h
						Channels.h
						ChannelsAccessor.h
						ChannelsAccessorAccessBitty.h
						ChannelsAccessorByteAligned.h
						ChannelsAccessorChannelBitty.h
						ChannelsAccessorContiguous.h
						ChannelsAccessorCreator.h
						ChannelsAccessorTypeConvert.h
						ChannelsAccessorWorstCase.h
						ChannelsCopier.h
						ChannelsHelper.h
						ChunkFileNames.h
						ClassFunctionsCall.h
						ClassStorage.h
						Collection.h
						ConcreteClass.h
						ConstructorUnknown.h
						DependentObjects.h
						DependentObjectSerialiser.h
						HollowObject.h
						IndexedObjects.h
						Iterables.h
						Listener.h
						ListenerCall.h
						MapCommon.h
						MapStringUnknown.h
						MapTypeUnknown.h
						NamedHollowObject.h
						NamedIndexedBlock.h
						NamedIndexedData.h
						NamedIndexedObjects.h
						NamedIndexedSorterSource.h
						NamedIndexes.h
						NamedIndexesBlock.h
						NamedIndexesBlocks.h
						NamedIndexesBlocksLoader.h
						NamedIndexesFileDumper.h
						NamedIndexesOptimiser.h
						NamedObject.h
						Object.h
						ObjectConverter.h
						ObjectConverterNative.h
						ObjectConverterText.h
						ObjectDeserialiser.h
						ObjectFileGeneral.h
						ObjectGraphDeserialiser.h
						ObjectGraphSerialiser.h
						ObjectMultipleSource.h
						ObjectReader.h
						ObjectReaderChunked.h
						ObjectReaderSimple.h
						Objects.h
						ObjectSerialiser.h
						ObjectSingleSource.h
						ObjectSource.h
						ObjectSourceChunked.h
						ObjectSourceFiles.h
						ObjectSourceIndexedData.h
						ObjectSourceNative.h
						ObjectSourceSimple.h
						ObjectSourceText.h
						ObjectsSource.h
						ObjectWriter.h
						ObjectWriterChunked.h
						ObjectWriterIndexed.h
						ObjectWriterSimple.h
						Parameters.h
						Pointer.h
						PointerObject.h
						PreClass.h
						Root.h
						SerialisedObject.h
						Set.h
						SetType.h
						SetUnknown.h
						SingleChannelAccessor.h
						StandardHeader.h
						String.h
						TimerAlarm.h
						TimerListener.h
						TrackerTemplate.h
						Unknown.h
						Unknowns.h
                    )

    SET(SOURCE_FILES 
						AbstractClass.cpp
						Action.cpp
						Actions.cpp
						Array.cpp
						ArrayCommonObject.cpp
						ArrayCommonUnknown.cpp
						ArrayUnknown.cpp
						BaseObject.cpp
						Channel.cpp
						ChannelAccessor.cpp
						ChannelPadder.cpp
						Channels.cpp
						ChannelsAccessor.cpp
						ChannelsAccessorAccessBitty.cpp
						ChannelsAccessorByteAligned.cpp
						ChannelsAccessorChannelBitty.cpp
						ChannelsAccessorContiguous.cpp
						ChannelsAccessorCreator.cpp
						ChannelsAccessorTypeConvert.cpp
						ChannelsAccessorWorstCase.cpp
						ChannelsCopier.cpp
						ChannelsHelper.cpp
						ChunkFileNames.cpp
						ClassFunctionsCall.cpp
						ClassStorage.cpp
						Collection.cpp
						ConcreteClass.cpp
						ConstructorUnknown.cpp
						DependentObjects.cpp
						DependentObjectSerialiser.cpp
						HollowObject.cpp
						IndexedObjects.cpp
						Iterables.cpp
						ListenerCall.cpp
						MapCommon.cpp
						MapStringUnknown.cpp
						NamedHollowObject.cpp
						NamedIndexedBlock.cpp
						NamedIndexedData.cpp
						NamedIndexedObjects.cpp
						NamedIndexedSorterSource.cpp
						NamedIndexes.cpp
						NamedIndexesBlock.cpp
						NamedIndexesBlocks.cpp
						NamedIndexesBlocksLoader.cpp
						NamedIndexesFileDumper.cpp
						NamedIndexesOptimiser.cpp
						NamedObject.cpp
						Object.cpp
						ObjectConverter.cpp
						ObjectConverterNative.cpp
						ObjectConverterText.cpp
						ObjectDeserialiser.cpp
						ObjectGraphDeserialiser.cpp
						ObjectGraphSerialiser.cpp
						ObjectMultipleSource.cpp
						ObjectReader.cpp
						ObjectReaderChunked.cpp
						ObjectReaderSimple.cpp
						Objects.cpp
						ObjectSerialiser.cpp
						ObjectSingleSource.cpp
						ObjectSource.cpp
						ObjectSourceChunked.cpp
						ObjectSourceNative.cpp
						ObjectSourceSimple.cpp
						ObjectSourceText.cpp
						ObjectsSource.cpp
						ObjectWriter.cpp
						ObjectWriterChunked.cpp
						ObjectWriterIndexed.cpp
						ObjectWriterSimple.cpp
						PointerObject.cpp
						PreClass.cpp
						Root.cpp
						SerialisedObject.cpp
						Set.cpp
						SetUnknown.cpp
						SingleChannelAccessor.cpp
						StandardHeader.cpp
						String.cpp
						TimerAlarm.cpp
						Unknown.cpp
						Unknowns.cpp
                    )

    # Shared Library or Static                    
    IF(${CodaphelaLibrary_BUILD_SHARED_LIBRARY})
        ADD_LIBRARY(${LIB_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
    ELSE()
        ADD_LIBRARY(${LIB_NAME} ${SOURCE_FILES} ${HEADER_FILES})
    ENDIF()
    TARGET_LINK_LIBRARIES(${LIB_NAME} CoreLib BaseLib)

    # Installation
    INSTALL(TARGETS ${LIB_NAME}
            LIBRARY DESTINATION lib${LIB_ARCH}
            ARCHIVE DESTINATION lib${LIB_ARCH}
            RUNTIME DESTINATION bin)
    INSTALL(FILES ${HEADER_FILES}
            DESTINATION include/${PROJECT_NAME}/${LIB_NAME})
ENDIF()
