SET(LIB_NAME SupportLib)
OPTION(${PROJECT_NAME}_BUILD_${LIB_NAME} "Set this to ON to build ${LIB_NAME}." ON)

IF(${${PROJECT_NAME}_BUILD_${LIB_NAME}})
    SET(HEADER_FILES
                        Box.h
                        BumpMapper.h
                        Camera.h
                        ChannelTypes.h
                        ColourARGB.h
                        Connection.h
                        ConvexHull.h
                        CopyPaste.h
                        FillRectangle.h
                        Font.h
                        FontList.h
                        Glyph.h
                        HalfSpace.h
                        Image.h
                        ImageAccessor.h
                        ImageAccessorByte.h
                        ImageAccessorCreator.h
                        ImageCel.h
                        ImageCelGroup.h
                        ImageCelMask.h
                        ImageCelMaskTransparent.h
                        ImageCelSource.h
                        ImageCelSourceBorders.h
                        ImageCelSourceGrid.h
                        ImageCelSourceRectangles.h
                        ImageCelSourceSingle.h
                        ImageCelSourceSubImages.h
                        ImageCelsSource.h
                        ImageCelsSourceXML.h
                        ImageCelTransparent.h
                        ImageChannel.h
                        ImageChannelAdd.h
                        ImageChannelRename.h
                        ImageColour.h
                        ImageCombiner.h
                        ImageCopier.h
                        ImageDivider.h
                        ImageDividerNumbers.h
                        ImageDrawBox.h
                        ImageFileType.h
                        ImageFiller.h
                        ImageGreyToRGB.h
                        ImageModifier.h
                        ImageModifierStack.h
                        ImageReader.h
                        ImageRecolour.h
                        ImageRecolourInvertBlackAndWhite.h
                        ImageResampler.h
                        ImageRGBToGrey.h
                        ImageSource.h
                        ImageSourceChunkedFile.h
                        ImageSourceDiskFile.h
                        ImageSourceMemory.h
                        ImageWriter.h
                        Instance.h
                        Light.h
                        LineInfinite.h
                        LineSegment.h
                        Material.h
                        MaterialHelper.h
                        MaterialImage.h
                        MaterialProperties.h
                        Mesh.h
                        MeshBoundingBox.h
                        MeshBoxEditor.h
                        MeshCache.h
                        MeshCacher.h
                        MeshColours.h
                        MeshConeEditor.h
                        MeshConnectivity.h
                        MeshConvexHull.h
                        MeshCorner.h
                        MeshCornerBuilder.h
                        MeshCylinderEditor.h
                        MeshDefines.h
                        MeshDetail.h
                        MeshDiscEditor.h
                        MeshEdge.h
                        MeshEdgeVisibility.h
                        MeshEditor.h
                        MeshEditorWrapper.h
                        MeshFace.h
                        MeshFaceReturn.h
                        MeshFaceTypes.h
                        MeshFileType.h
                        MeshFlatFaces.h
                        MeshGeosphereEditor.h
                        MeshIndexArray.h
                        MeshLeaves.h
                        MeshMaterials.h
                        MeshModifier.h
                        MeshModifierStack.h
                        MeshNormals.h
                        MeshPlaneEditor.h
                        MeshPolygons.h
                        MeshPositions.h
                        MeshReader.h
                        MeshRingEditor.h
                        MeshSelections.h
                        MeshShape.h
                        MeshSkin.h
                        MeshSmoothFaces.h
                        MeshSmoothGroups.h
                        MeshSmoothingGroupsToNormals.h
                        MeshSourceModifier.h
                        MeshSphereEditor.h
                        MeshTorusEditor.h
                        MeshTriangles.h
                        MeshTubeEditor.h
                        MeshTypeIndices.h
                        MeshUVCoords.h
                        MeshVertexArray.h
                        MeshWriter.h
                        MTLReader.h
                        ObjectSourcesXML.h
                        OBJReader.h
                        OBJWriter.h
                        PackAttempt.h
                        PackedLine.h
                        PackedRectangle.h
                        PixelOpacity.h
                        Plane.h
                        PNGReader.h
                        Polygon.h
                        RADReader.h
                        RADWriter.h
                        Ray.h
                        Rectangle.h
                        RectangleBestPacker.h
                        RectangleLinePacker.h
                        RectanglePacker.h
                        RectanglePow2Packer.h
                        Scene.h
                        Sequence.h
                        ShapeHelper.h
                        ShapesIndexed.h
                        Sphere.h
                        SubImage.h
                        SubImageXML.h
                        TGAReader.h
                        Tile.h
                        TileBoolean.h
                        TileImageCel.h
                        TileLayer.h
                        TileMap.h
                        TileMapXML.h
                        TileType.h
                        TileWorld.h
                        TrackerTypes.h
                        Triangle.h
                        VertexArray.h
                        VertexChannel.h
                        WinText.h
                    )

    SET(SOURCE_FILES 
                        Box.cpp
                        BumpMapper.cpp
                        Camera.cpp
                        ColourARGB.cpp
                        Connection.cpp
                        ConvexHull.cpp
                        CopyPaste_Windows.cpp
                        FillRectangle.cpp
                        Font.cpp
                        FontList.cpp
                        Glyph.cpp
                        HalfSpace.cpp
                        Image.cpp
                        ImageAccessor.cpp
                        ImageAccessorByte.cpp
                        ImageAccessorCreator.cpp
                        ImageCel.cpp
                        ImageCelGroup.cpp
                        ImageCelMask.cpp
                        ImageCelMaskTransparent.cpp
                        ImageCelSource.cpp
                        ImageCelSourceBorders.cpp
                        ImageCelSourceGrid.cpp
                        ImageCelSourceRectangles.cpp
                        ImageCelSourceSingle.cpp
                        ImageCelSourceSubImages.cpp
                        ImageCelsSource.cpp
                        ImageCelsSourceXML.cpp
                        ImageCelTransparent.cpp
                        ImageChannel.cpp
                        ImageChannelAdd.cpp
                        ImageChannelRename.cpp
                        ImageColour.cpp
                        ImageCombiner.cpp
                        ImageCopier.cpp
                        ImageDivider.cpp
                        ImageDividerNumbers.cpp
                        ImageDrawBox.cpp
                        ImageFileType.cpp
                        ImageFiller.cpp
                        ImageGreyToRGB.cpp
                        ImageModifier.cpp
                        ImageModifierStack.cpp
                        ImageReader.cpp
                        ImageRecolour.cpp
                        ImageRecolourInvertBlackAndWhite.cpp
                        ImageResampler.cpp
                        ImageRGBToGrey.cpp
                        ImageSource.cpp
                        ImageSourceDiskFile.cpp
                        ImageSourceMemory.cpp
                        ImageWriter.cpp
                        Instance.cpp
                        Light.cpp
                        LineInfinite.cpp
                        LineSegment.cpp
                        Material.cpp
                        MaterialHelper.cpp
                        MaterialImage.cpp
                        MaterialProperties.cpp
                        Mesh.cpp
                        MeshBoundingBox.cpp
                        MeshBoxEditor.cpp
                        MeshCache.cpp
                        MeshCacher.cpp
                        MeshColours.cpp
                        MeshConeEditor.cpp
                        MeshConnectivity.cpp
                        MeshConvexHull.cpp
                        MeshCorner.cpp
                        MeshCornerBuilder.cpp
                        MeshCylinderEditor.cpp
                        MeshDetail.cpp
                        MeshDiscEditor.cpp
                        MeshEdge.cpp
                        MeshEdgeVisibility.cpp
                        MeshEditor.cpp
                        MeshEditorWrapper.cpp
                        MeshFace.cpp
                        MeshFaceReturn.cpp
                        MeshFaceTypes.cpp
                        MeshFileType.cpp
                        MeshFlatFaces.cpp
                        MeshLeaves.cpp
                        MeshMaterials.cpp
                        MeshModifier.cpp
                        MeshModifierStack.cpp
                        MeshNormals.cpp
                        MeshPlaneEditor.cpp
                        MeshPolygons.cpp
                        MeshPositions.cpp
                        MeshReader.cpp
                        MeshRingEditor.cpp
                        MeshSelections.cpp
                        MeshShape.cpp
                        MeshSkin.cpp
                        MeshSmoothFaces.cpp
                        MeshSmoothGroups.cpp
                        MeshSourceModifier.cpp
                        MeshTriangles.cpp
                        MeshTubeEditor.cpp
                        MeshTypeIndices.cpp
                        MeshUVCoords.cpp
                        MeshVertexArray.cpp
                        MeshWriter.cpp
                        MTLReader.cpp
                        ObjectSourcesXML.cpp
                        OBJReader.cpp
                        OBJWriter.cpp
                        PackAttempt.cpp
                        PackedLine.cpp
                        PackedRectangle.cpp
                        PixelOpacity.cpp
                        Plane.cpp
                        PNGReader.cpp
                        Polygon.cpp
                        RADReader.cpp
                        RADWriter.cpp
                        Ray.cpp
                        Rectangle.cpp
                        RectangleBestPacker.cpp
                        RectangleLinePacker.cpp
                        RectanglePow2Packer.cpp
                        Scene.cpp
                        Sequence.cpp
                        ShapeHelper.cpp
                        ShapesIndexed.cpp
                        Sphere.cpp
                        SubImage.cpp
                        SubImageXML.cpp
                        TGAReader.cpp
                        Tile.cpp
                        TileBoolean.cpp
                        TileImageCel.cpp
                        TileLayer.cpp
                        TileMap.cpp
                        TileMapXML.cpp
                        TileType.cpp
                        TileWorld.cpp
                        Triangle.cpp
                        VertexChannel.cpp
                        WinText.cpp
                    )

    # Shared Library or Static                    
    IF(${CodaphelaLibrary_BUILD_SHARED_LIBRARY})
        ADD_LIBRARY(${LIB_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
    ELSE()
        ADD_LIBRARY(${LIB_NAME} ${SOURCE_FILES} ${HEADER_FILES})
    ENDIF()
    # TARGET_LINK_LIBRARIES(${LIB_NAME} )

    # Installation
    INSTALL(TARGETS ${LIB_NAME}
            LIBRARY DESTINATION lib${LIB_ARCH}
            ARCHIVE DESTINATION lib${LIB_ARCH}
            RUNTIME DESTINATION bin)
    INSTALL(FILES ${HEADER_FILES}
            DESTINATION include/${PROJECT_NAME}/${LIB_NAME})
ENDIF()